fixed footer issues in mobile now only visible to screen > 1000px

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body {
 }
 h2{
     margin-top:1rem;
-    font-size: xx-large;
+    font-size: 1.75rem;
     text-align: center;
 }
 .container{
@@ -120,5 +120,8 @@ footer a{
 
     .button-group button {
         font-size: 0.85rem;
+    }
+    footer {
+        display:none;
     }
 }
